# ml_randomforest

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: bulldozer_model.ipynb  eda.ipynb
ui/: main.py
ui/templates/: index.html  result.html
