[project]
name = "nhom12"
version = "0.1.0"
description = "BTL nhom12"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dtreeviz>=2.2.2",
    "fastapi>=0.115.12",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "treeinterpreter>=0.2.3",
    "uvicorn>=0.34.2",
    "waterfallcharts>=3.8",
]
